<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loginCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorPrimary"
    android:padding="10dp">

    <net.theunifyproject.lethalskillzz.widget.MyViewPager
        android:id="@+id/viewPagerVertical3"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">


    <LinearLayout
            android:id="@+id/layout_login"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:theme="@style/MyEditTextTheme"
            android:padding="20dp">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"

                >

                <EditText
                    android:id="@+id/input_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:maxLength="15"
                    android:padding="10dp"
                    android:hint="@string/hint_username_or_mobile" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                >

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:maxLength="12"
                    android:padding="10dp"
                    android:hint="@string/hint_password" />
            </android.support.design.widget.TextInputLayout>


            <Button android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_sign_up"
                android:background="@color/colorPrimaryDark"
                android:layout_marginTop="40dp"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/btnLinkToRegisterScreen"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:background="@null"
                android:text="@string/btn_link_to_register"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btnForgotPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@null"
                android:text="@string/btn_link_forgot_password"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_forgot_password"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:theme="@style/MyEditTextTheme"
            android:orientation="vertical"
            android:padding="20dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <EditText
                    android:id="@+id/input_forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|phone"
                    android:singleLine="true"
                    android:maxLength="11"
                    android:padding="10dp"
                    android:hint="@string/hint_mobile"/>

            </android.support.design.widget.TextInputLayout>



            <Button android:id="@+id/btn_recover_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_recover_password"
                android:background="@color/colorPrimaryDark"
                android:layout_marginTop="40dp"
                android:textColor="@android:color/white"/>



        </LinearLayout>

    </net.theunifyproject.lethalskillzz.widget.MyViewPager>


    <ProgressBar
        android:id="@+id/loginProgressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="60dp"
        android:indeterminateTint="@color/colorAccent"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone" />


</android.support.design.widget.CoordinatorLayout>
