<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/changePasswordCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ash_background"
    tools:context="net.theunifyproject.lethalskillzz.activity.ChangePasswordActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/change_password_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/feed_item_bg"
        android:padding="20dp">



        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_change_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            >

            <EditText
                android:id="@+id/input_change_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"
                android:maxLength="12"
                android:textColor="@color/input_login"
                android:padding="10dp"
                android:hint="@string/hint_password" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_change_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            >

            <EditText
                android:id="@+id/input_change_new_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_new_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:maxLength="12"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_register_hint" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_change_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            >

            <EditText
                android:id="@+id/input_change_confirm_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:maxLength="12"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_register_hint" />

        </android.support.design.widget.TextInputLayout>



        <Button android:id="@+id/change_password_btn_submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_submit"
            android:background="@color/colorPrimaryDark"
            android:layout_marginTop="40dp"
            android:textColor="@android:color/white"/>


    </LinearLayout>


    <ProgressBar
        android:id="@+id/change_password_progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="60dp"
        android:indeterminateTint="@color/colorAccent"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone" />


</android.support.design.widget.CoordinatorLayout>
